--- a/src/FlowBlot.csproj
+++ b/src/FlowBlot.csproj
@@ -54,85 +54,165 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Flows\Context-Sensitivity\Flow_00010.cs" />
+    <Compile Include="Flows\Context-Sensitivity\Flow_00010_inplace.cs" />
     <Compile Include="Flows\Flow-Sensitivity\Flow_00071.cs" />
+    <Compile Include="Flows\Flow-Sensitivity\Flow_00071_inplace.cs" />
     <Compile Include="Flows\Flow-Sensitivity\Flow_00070.cs" />
+    <Compile Include="Flows\Flow-Sensitivity\Flow_00070_inplace.cs" />
     <Compile Include="Flows\Lambda-Functions\Flow_00077.cs" />
+    <Compile Include="Flows\Lambda-Functions\Flow_00077_inplace.cs" />
     <Compile Include="Flows\Miscellaneous\Flow_00073.cs" />
+    <Compile Include="Flows\Miscellaneous\Flow_00073_inplace.cs" />
     <Compile Include="Flows\Miscellaneous\Flow_00072.cs" />
+    <Compile Include="Flows\Miscellaneous\Flow_00072_inplace.cs" />
     <Compile Include="Flows\Miscellaneous\Flow_00081.cs" />
+    <Compile Include="Flows\Miscellaneous\Flow_00081_inplace.cs" />
     <Compile Include="Flows\Miscellaneous\Flow_00080.cs" />
+    <Compile Include="Flows\Miscellaneous\Flow_00080_inplace.cs" />
     <Compile Include="Flows\Miscellaneous\Flow_00079.cs" />
+    <Compile Include="Flows\Miscellaneous\Flow_00079_inplace.cs" />
     <Compile Include="Flows\Miscellaneous\Flow_00078.cs" />
+    <Compile Include="Flows\Miscellaneous\Flow_00078_inplace.cs" />
     <Compile Include="Flows\Miscellaneous\Flow_00074.cs" />
+    <Compile Include="Flows\Miscellaneous\Flow_00074_inplace.cs" />
     <Compile Include="Flows\Multi-Source-Multi-Sink\Flow_00024.cs" />
+    <Compile Include="Flows\Multi-Source-Multi-Sink\Flow_00024_inplace.cs" />
     <Compile Include="Flows\Multi-Source-Multi-Sink\Flow_00026.cs" />
+    <Compile Include="Flows\Multi-Source-Multi-Sink\Flow_00026_inplace.cs" />
     <Compile Include="Flows\Points-To-Analysis\Flow_00075.cs" />
+    <Compile Include="Flows\Points-To-Analysis\Flow_00075_inplace.cs" />
     <Compile Include="Flows\Polymorphism\Flow_00076.cs" />
+    <Compile Include="Flows\Polymorphism\Flow_00076_inplace.cs" />
     <Compile Include="Flows\Simple\Flow_00011.cs" />
+    <Compile Include="Flows\Simple\Flow_00011_inplace.cs" />
     <Compile Include="Flows\PassByReference\Flow_00012.cs" />
+    <Compile Include="Flows\PassByReference\Flow_00012_inplace.cs" />
     <Compile Include="Flows\PassByReference\Flow_00013.cs" />
+    <Compile Include="Flows\PassByReference\Flow_00013_inplace.cs" />
     <Compile Include="Flows\Path-Sensitivity\Flow_00014.cs" />
+    <Compile Include="Flows\Path-Sensitivity\Flow_00014_inplace.cs" />
     <Compile Include="Flows\Path-Sensitivity\Flow_00015.cs" />
+    <Compile Include="Flows\Path-Sensitivity\Flow_00015_inplace.cs" />
     <Compile Include="Flows\Loops\Flow_00016.cs" />
+    <Compile Include="Flows\Loops\Flow_00016_inplace.cs" />
     <Compile Include="Flows\Recursion\Flow_00017.cs" />
+    <Compile Include="Flows\Recursion\Flow_00017_inplace.cs" />
     <Compile Include="Flows\Nested-Calls\Flow_00018.cs" />
+    <Compile Include="Flows\Nested-Calls\Flow_00018_inplace.cs" />
     <Compile Include="Flows\Getter-Setter\Flow_00019.cs" />
+    <Compile Include="Flows\Getter-Setter\Flow_00019_inplace.cs" />
     <Compile Include="Flows\Simple\Flow_00002.cs" />
+    <Compile Include="Flows\Simple\Flow_00002_inplace.cs" />
     <Compile Include="Flows\Getter-Setter\Flow_00020.cs" />
+    <Compile Include="Flows\Getter-Setter\Flow_00020_inplace.cs" />
     <Compile Include="Flows\Polymorphism\Flow_00021.cs" />
+    <Compile Include="Flows\Polymorphism\Flow_00021_inplace.cs" />
     <Compile Include="Flows\Polymorphism\Flow_00022.cs" />
+    <Compile Include="Flows\Polymorphism\Flow_00022_inplace.cs" />
     <Compile Include="Flows\Multi-Source-Multi-Sink\Flow_00023.cs" />
+    <Compile Include="Flows\Multi-Source-Multi-Sink\Flow_00023_inplace.cs" />
     <Compile Include="Flows\Multi-Source-Multi-Sink\Flow_00025.cs" />
+    <Compile Include="Flows\Multi-Source-Multi-Sink\Flow_00025_inplace.cs" />
     <Compile Include="Flows\Path-Sensitivity\Flow_00027.cs" />
+    <Compile Include="Flows\Path-Sensitivity\Flow_00027_inplace.cs" />
     <Compile Include="Flows\Integer Casting\Flow_00028.cs" />
+    <Compile Include="Flows\Integer Casting\Flow_00028_inplace.cs" />
     <Compile Include="Flows\PassByReference\Flow_00029.cs" />
+    <Compile Include="Flows\PassByReference\Flow_00029_inplace.cs" />
     <Compile Include="Flows\PassByReference\Flow_00030.cs" />
+    <Compile Include="Flows\PassByReference\Flow_00030_inplace.cs" />
     <Compile Include="Flows\Static-Variable\Flow_00031.cs" />
+    <Compile Include="Flows\Static-Variable\Flow_00031_inplace.cs" />
     <Compile Include="Flows\Field-Sensitivity\Flow_00003.cs" />
+    <Compile Include="Flows\Field-Sensitivity\Flow_00003_inplace.cs" />
     <Compile Include="Flows\Field-Sensitivity\Flow_00069.cs" />
+    <Compile Include="Flows\Field-Sensitivity\Flow_00069_inplace.cs" />
     <Compile Include="Flows\Flow-Sensitivity\Flow_00068.cs" />
+    <Compile Include="Flows\Flow-Sensitivity\Flow_00068_inplace.cs" />
     <Compile Include="Flows\Points-To-Analysis\Flow_00067.cs" />
+    <Compile Include="Flows\Points-To-Analysis\Flow_00067_inplace.cs" />
     <Compile Include="Flows\Points-To-Analysis\Flow_00048.cs" />
+    <Compile Include="Flows\Points-To-Analysis\Flow_00048_inplace.cs" />
     <Compile Include="Flows\Points-To-Analysis\Flow_00047.cs" />
+    <Compile Include="Flows\Points-To-Analysis\Flow_00047_inplace.cs" />
     <Compile Include="Flows\Points-To-Analysis\Flow_00046.cs" />
+    <Compile Include="Flows\Points-To-Analysis\Flow_00046_inplace.cs" />
     <Compile Include="Flows\Points-To-Analysis\Flow_00045.cs" />
+    <Compile Include="Flows\Points-To-Analysis\Flow_00045_inplace.cs" />
     <Compile Include="Flows\Points-To-Analysis\Flow_00032.cs" />
+    <Compile Include="Flows\Points-To-Analysis\Flow_00032_inplace.cs" />
     <Compile Include="Flows\Points-To-Analysis\Flow_00033.cs" />
+    <Compile Include="Flows\Points-To-Analysis\Flow_00033_inplace.cs" />
     <Compile Include="Flows\Flow-Sensitivity\Flow_00034.cs" />
+    <Compile Include="Flows\Flow-Sensitivity\Flow_00034_inplace.cs" />
     <Compile Include="Flows\Recursion\Flow_00035.cs" />
+    <Compile Include="Flows\Recursion\Flow_00035_inplace.cs" />
     <Compile Include="Flows\Points-To-Analysis\Flow_00036.cs" />
+    <Compile Include="Flows\Points-To-Analysis\Flow_00036_inplace.cs" />
     <Compile Include="Flows\Exceptions\Flow_00037.cs" />
+    <Compile Include="Flows\Exceptions\Flow_00037_inplace.cs" />
     <Compile Include="Flows\Exceptions\Flow_00038.cs" />
+    <Compile Include="Flows\Exceptions\Flow_00038_inplace.cs" />
     <Compile Include="Flows\String-Operations\Flow_00039.cs" />
+    <Compile Include="Flows\String-Operations\Flow_00039_inplace.cs" />
     <Compile Include="Flows\Unreachable Flow\Flow_00040.cs" />
+    <Compile Include="Flows\Unreachable Flow\Flow_00040_inplace.cs" />
     <Compile Include="Flows\String-Operations\Flow_00041.cs" />
+    <Compile Include="Flows\String-Operations\Flow_00041_inplace.cs" />
     <Compile Include="Flows\Field-Sensitivity\Flow_00004.cs" />
+    <Compile Include="Flows\Field-Sensitivity\Flow_00004_inplace.cs" />
     <Compile Include="Flows\Regular Expression\Flow_00042.cs" />
+    <Compile Include="Flows\Regular Expression\Flow_00042_inplace.cs" />
     <Compile Include="Flows\Miscellaneous\Flow_00043.cs" />
+    <Compile Include="Flows\Miscellaneous\Flow_00043_inplace.cs" />
     <Compile Include="Flows\Miscellaneous\Flow_00044.cs" />
+    <Compile Include="Flows\Miscellaneous\Flow_00044_inplace.cs" />
     <Compile Include="Flows\Flow-Sensitivity\Flow_00066.cs" />
+    <Compile Include="Flows\Flow-Sensitivity\Flow_00066_inplace.cs" />
     <Compile Include="Flows\Points-To-Analysis\Flow_00065.cs" />
+    <Compile Include="Flows\Points-To-Analysis\Flow_00065_inplace.cs" />
     <Compile Include="Flows\Inline-Instantiations\Flow_00064.cs" />
+    <Compile Include="Flows\Inline-Instantiations\Flow_00064_inplace.cs" />
     <Compile Include="Flows\Inline-Instantiations\Flow_00063.cs" />
+    <Compile Include="Flows\Inline-Instantiations\Flow_00063_inplace.cs" />
     <Compile Include="Flows\Reflection\Flow_00062.cs" />
+    <Compile Include="Flows\Reflection\Flow_00062_inplace.cs" />
     <Compile Include="Flows\Lambda-Functions\Flow_00061.cs" />
+    <Compile Include="Flows\Lambda-Functions\Flow_00061_inplace.cs" />
     <Compile Include="Flows\Lambda-Functions\Flow_00060.cs" />
+    <Compile Include="Flows\Lambda-Functions\Flow_00060_inplace.cs" />
     <Compile Include="Flows\Flow-Sensitivity\Flow_00059.cs" />
+    <Compile Include="Flows\Flow-Sensitivity\Flow_00059_inplace.cs" />
     <Compile Include="Flows\Points-To-Analysis\Flow_00058.cs" />
+    <Compile Include="Flows\Points-To-Analysis\Flow_00058_inplace.cs" />
     <Compile Include="Flows\Points-To-Analysis\Flow_00057.cs" />
+    <Compile Include="Flows\Points-To-Analysis\Flow_00057_inplace.cs" />
     <Compile Include="Flows\Points-To-Analysis\Flow_00056.cs" />
+    <Compile Include="Flows\Points-To-Analysis\Flow_00056_inplace.cs" />
     <Compile Include="Flows\Points-To-Analysis\Flow_00055.cs" />
+    <Compile Include="Flows\Points-To-Analysis\Flow_00055_inplace.cs" />
     <Compile Include="Flows\Aggregates\Flow_00054.cs" />
+    <Compile Include="Flows\Aggregates\Flow_00054_inplace.cs" />
     <Compile Include="Flows\Aggregates\Flow_00053.cs" />
+    <Compile Include="Flows\Aggregates\Flow_00053_inplace.cs" />
     <Compile Include="Flows\Aggregates\Flow_00052.cs" />
+    <Compile Include="Flows\Aggregates\Flow_00052_inplace.cs" />
     <Compile Include="Flows\Aggregates\Flow_00051.cs" />
+    <Compile Include="Flows\Aggregates\Flow_00051_inplace.cs" />
     <Compile Include="Flows\Aggregates\Flow_00050.cs" />
+    <Compile Include="Flows\Aggregates\Flow_00050_inplace.cs" />
     <Compile Include="Flows\Aggregates\Flow_00049.cs" />
+    <Compile Include="Flows\Aggregates\Flow_00049_inplace.cs" />
     <Compile Include="Flows\Aggregates\Flow_00005.cs" />
+    <Compile Include="Flows\Aggregates\Flow_00005_inplace.cs" />
     <Compile Include="Flows\Aggregates\Flow_00006.cs" />
+    <Compile Include="Flows\Aggregates\Flow_00006_inplace.cs" />
     <Compile Include="Flows\Path-Sensitivity\Flow_00007.cs" />
+    <Compile Include="Flows\Path-Sensitivity\Flow_00007_inplace.cs" />
     <Compile Include="Flows\Path-Sensitivity\Flow_00008.cs" />
+    <Compile Include="Flows\Path-Sensitivity\Flow_00008_inplace.cs" />
     <Compile Include="Flows\Context-Sensitivity\Flow_00009.cs" />
+    <Compile Include="Flows\Context-Sensitivity\Flow_00009_inplace.cs" />
     <Compile Include="Model\Alphabet.cs" />
     <Compile Include="Model\Blot.cs" />
     <Compile Include="Model\BlotBag.cs" />
@@ -147,6 +227,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Atlas.cs" />
     <Compile Include="Flows\Simple\Flow_00001.cs" />
+    <Compile Include="Flows\Simple\Flow_00001_inplace.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
